--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Tue Oct 31 02:41:51 MSK 2017
+#Wed Nov 01 07:47:56 MSK 2017
 javarush.query.filter=
 javarush.quest.filter=QUEST_JAVA_SYNTAX
 javarush.status.filter=ANY
-javarush.last.task.key=com.javarush.task.task02.task0217
-javarush.last.task.path=/Users/ivanborisov/Yandex.Disk.localized/\u041F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435/JavaRushTask/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task02/task0217
+javarush.last.task.key=com.javarush.task.task02.task0218
 javarush.user.secretkey=29f287f4-a6b4-4f7c-a7a5-428e55a71412
+javarush.last.task.path=/Users/ivanborisov/Yandex.Disk.localized/\u041F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task02/task0218
 javarush.level.filter=TWO
