--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,9 @@
-#Fri Feb 02 11:58:29 MSK 2018
+#Sat Mar 24 10:10:00 MSK 2018
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task07.task0722
+javarush.last.task.key=com.javarush.task.task07.task0724
 javarush.user.secretkey=29f287f4-a6b4-4f7c-a7a5-428e55a71412
-javarush.last.task.path=/Users/ivanborisov/Yandex.Disk.localized/IT/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task07/task0722
+javarush.last.task.path=/Users/ivanborisov/Yandex.Disk.localized/IT/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task07/task0724
+javarush.skip.set.autoscrolls=true
 javarush.level.filter=7
